docs: add Codestral model and API key config

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "gemini-pro",
         "generative-ai",
         "mistral",
+        "codestral",
         "ollama",
         "llama3",
         "llm",
